fix width jumping on transition

--- a/src/index.scss
+++ b/src/index.scss
@@ -338,6 +338,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
 }
 .fade.ng-enter{
     opacity: 0;
